# zebra_scanner_labeling

./: CMakeLists.txt  dialog.cpp  dialog.cpp.autosave  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.cpp  output.h  output.ui  position.h  positions.xml  quest.cpp  quest.h  quest.ui  question.cpp  sender.cpp  sender.h  vars.xml
include/: ConsoleMain.h  ConsoleSampleEventListener.h  ISO15434formatEnvelope.h
src/: ConsoleMain.cpp  ConsoleSampleEventListener.cpp  ISO15434formatEnvelope.cpp
